# DAB_Simple_POC

./: .gitignore  README.md  databricks.yml  pyproject.toml
resources/: dab_walkthrough_etl.pipeline.yml  delta_sample.job.yml  sample_job.job.yml  taxi_analytics.job.yml  taxi_data_pipeline.pipeline.yml
src/: sample_notebook.ipynb
src/dab_walkthrough/: main.py
src/dab_walkthrough_etl/: README.md
src/dab_walkthrough_etl/transformations/: sample_trips_dab_walkthrough.py  sample_zones_dab_walkthrough.py
src/delta_sample_job/: create_delta_table.py  read_delta.py
src/poc_dab_walkthrough/: main.py
src/taxi_analytics_job/: taxi_analysis.ipynb
src/taxi_data_pipeline/: README.md
src/taxi_data_pipeline/transformations/: bronze_trips.py  gold_zone_metrics.py  silver_trips.py
tests/: sample_taxis_test.py
