[project]
# Update the project name to match your actual project name
name = "poc_dab_walkthrough"
version = "0.0.1"
# Update with your email or organization name for your environment
authors = [{ name = "your-email@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    # Any dependencies for jobs and pipelines in this project can be added here
    # See also https://docs.databricks.com/dev-tools/bundles/library-dependencies
    #
    # LIMITATION: for pipelines, dependencies are cached during development;
    # add dependencies to the 'environment' section of your pipeline.yml file instead
]

[dependency-groups]
dev = [
    "pytest",
    "databricks-dlt",
    "databricks-connect>=15.4,<15.5",
]

[project.scripts]
# Update the entry point to match your package name under src/
# Format: {package_directory_name}.{module_name}:{function_name}
# Example: If your package is in src/my_package/main.py with a main() function,
#          change to: main = "my_package.main:main"
main = "poc_dab_walkthrough.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 125
